--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
@@ -24,6 +25,7 @@
     "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
