--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
-    "passport-custom": "^1.1.1",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
