--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
+    "react-donut-chart": "^1.1.8",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
